name          : sandman
version       : 0.1.0.0
synopsis      : Manages Cabal sandboxes to avoid rebuilding packages.
homepage      : https://github.com/abhinav/haskell-sandman
license       : MIT
license-file  : LICENSE
author        : Abhinav Gupta
maintainer    : mail@abhinavg.net
copyright     : (c) 2015 Abhinav Gupta
category      : Development
build-type    : Simple
cabal-version : >=1.10
description   : TODO

executable sandman
  main-is          : Main.hs
  build-depends    : base                 >= 4.7  && < 4.8

                   , Cabal
                   , classy-prelude       >= 0.10
                   , optparse-applicative >= 0.11
                   , process              >= 1.2
                   , system-fileio        >= 0.3
                   , system-filepath      >= 0.4
  default-language : Haskell2010
